WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245188
WC shouldn't require ENABLE_WEBGL
https://bugs.webkit.org/show_bug.cgi?id=245188
Summary
WC shouldn't require ENABLE_WEBGL
Don Olmstead
Reported
2022-09-14 12:40:33 PDT
DOM and Canvas rendering should be possible in WC without requiring WebGL. Main issue seems to be around using remoteGraphicsContextGLStreamWorkQueue.
Attachments
WIP Patch
(8.29 KB, patch)
2022-09-14 12:43 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2022-09-14 12:43:59 PDT
Created
attachment 462337
[details]
WIP Patch
Radar WebKit Bug Importer
Comment 2
2022-09-21 12:41:19 PDT
<
rdar://problem/100235785
>
Don Olmstead
Comment 3
2022-10-11 17:04:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5268
EWS
Comment 4
2023-02-03 11:01:00 PST
Committed
259825@main
(c4e0c5d7fd48): <
https://commits.webkit.org/259825@main
> Reviewed commits have been landed. Closing PR #5268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug