WC shouldn't require ENABLE_WEBGL https://bugs.webkit.org/show_bug.cgi?id=245188

Reviewed by Fujii Hironori.

Make it so `USE(GRAPHICS_LAYER_WC)` can work without `ENABLE(WEBGL)`.
Guard `ENABLE(WEBGL)` usage and add a single `StreamConnectionWorkQueue`
to submit commands to. This is done due to thread safety issues with
ANGLE.

* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
* Source/WebKit/GPUProcess/graphics/wc/RemoteWCLayerTreeHost.cpp:
* Source/WebKit/UIProcess/playstation/PageClientImpl.cpp:
* Source/WebKit/UIProcess/playstation/PageClientImpl.h:
* Source/WebKit/WebProcess/WebPage/wc/GraphicsLayerWC.cpp:

Canonical link: https://commits.webkit.org/259825@main